feat: webtoon, management webtoon 엔티티 수정
- 웹툰과 웹툰 관리 엔티티 수정으로 인해 바뀐 로직 수정